[project]
name = "fine-tune-llama-instruct-ultrachat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "ipykernel>=7.2.0",
    "peft>=0.18.1",
    "transformers>=5.4.0",
    "trl>=1.0.0",
]
